--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
