--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.10",
     "@types/node": "^20.19.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
